# GraphCpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  appveyor.yml  main.cpp
benchmarks/: CMakeLists.txt
benchmarks/benchmarks/: main.cpp  recursive_directory_test_runner.cpp  recursive_directory_test_runner.hpp  test_functions.hpp
benchmarks/include/benchmarks/: recursive_directory_test_runner.h  recursive_directory_test_runner.hpp  test_functions.h  test_functions.hpp
benchmarks/src/: main.cpp  recursive_directory_test_runner.cpp
ci/: build.ps1  (+1 more)
core/: CMakeLists.txt  reduction_statistic.hpp
core/core/: all.hpp  macroses.hpp
core/core/computations/multi_threaded/: multi_thread_calculator.cpp  multi_thread_calculator.hpp  multi_thread_summator.hpp
core/core/computations/single_threaded/: single_thread_calculator.cpp  single_thread_calculator.hpp  single_threaded_calculator.cpp
core/core/edges/: edge.hpp  symmetric_random_edge.hpp
core/core/flow_calculators/: algorithms.hpp  definitions.hpp  factorization.hpp  flow_calculators.hpp  flow_helpers.cpp  flow_helpers.hpp  matrix_of_flows.cpp  reduction_stats.cpp  reduction_stats.hpp  reduction_use_algorithm.hpp  reduction_use_factorization.hpp
core/core/flow_calculators/algorithms/: Dinic_algorithm.cpp  Dinic_algorithm.hpp  Edmonds_Karp_algorithm.hpp  Edmons_Karp_algorithm.cpp  Gomory_Hu_algorithm.hpp  preflow_push_algorithm.cpp  preflow_push_algorithm.hpp  reduction_use_algorithm.cpp
core/core/flow_calculators/computations/: calculator_base.hpp  calculator_maker.hpp
core/core/flow_calculators/flow_calculators/: Edmons_Karp_algorithm.cpp  reduction_use_algorithm.cpp
core/core/flow_calculators/internal/: reduction_use_algorithm_impl.hpp
core/core/flow_calculators/random_graph_reductions/: calculate_if_small_graph.hpp  split_to_components.hpp
core/core/flow_calculators/reductions/: bridge_reduction.hpp  calculate_if_small_graph.hpp  calculate_if_tree.hpp  hinges_reduction.hpp  remove_connected_trees_reduction.hpp  remove_hanged_vertexes_reduction.hpp  split_to_components_reduction.hpp
core/core/graph_implementations/: graph_base.hpp  graph_implementations.hpp
core/core/graph_implementations/non-oriented_graphs/: non_oriented_graph_base.hpp  non_oriented_matrix_graph.hpp
core/core/graph_implementations/oriented_graphs/: oriented_graph_base.hpp
core/core/graphs/: graph_base.cpp  graph_base.hpp
core/core/graphs/non_oriented_graphs/: non_oriented_graph_base.cpp  non_oriented_graph_base.hpp  (+1 more)
core/core/iterators/: matrix_iterator.cpp  matrix_iterator.hpp  symmetric_matrix_iterator.cpp  symmetric_matrix_iterator.hpp
core/core/matrices/: matrix_base.cpp  matrix_base.hpp
core/core/matrix_implementations/: matrix_base.hpp  matrix_implementations.hpp
core/core/random_graph_implementations/: random_graph_base.hpp
core/core/utils/: boost_future.hpp  defer.cpp  defer.hpp  numeric.cpp  numeric.hpp  synchronized_value.hpp  system_info.cpp  system_info.hpp  thread_pool.cpp  thread_pool.hpp
core/include/core/: all.hpp  edge.h  edge.hpp  flow_calculators.hpp  graph_base.h  macroses.h  macroses.hpp  symmetric_matrix.h  symmetric_matrix_iterator.hpp  utils.h  utils.hpp
core/src/: calculator_maker.hpp  edge.cpp  main.h  symmetric_matrix_graph.cpp  symmetric_matrix_iterator.cpp  symmetrical_edge.cpp  symmetrix_matrix.cpp  utils.cpp
core/src/GraphImplementation/: symmetric_matrix_graph.cpp
core/src/MatrixImplementaion/: matrix.cpp  symmetrix_matrix.cpp
core/src/MatrixImplementation/: full_symmetric_matrix.cpp  half_symmetric_matrix.cpp  symmertic_matrix_base.cpp
core/src/edges/: edge.cpp  random_edge.cpp  symmetric_edge.cpp  symmetric_random_edge.cpp  symmetrical_edge.cpp
core/src/flow_calculators/: Dinic_algorithm.cpp  Edmons_Karp_algorithm.cpp  Edmons_Karp_optimized_algorithm.cpp  flow_helpers.cpp  matrix_of_flows.cpp  preflow_push_algorithm.cpp  reduction_use_algorithm.cpp
core/src/graph_implementation/: graph_base.cpp
core/src/iterators/: matrix_iterator.cpp  symmetric_matrix_iterator.cpp
core/src/matrix_implementation/: full_symmetric_matrix.cpp  half_symmetric_matrix.cpp  matrix_base.cpp  symmertic_matrix_base.cpp
core/src/random_graph_implementations/: random_graph_base.cpp
core/src/utils/: numeric.cpp
functional.tests/: CMakeLists.txt
functional.tests/include/functional.tests/: recursive_directory_test_runner.h  test_functions.h
functional.tests/src/: main.cpp  recursive_directory_test_runner.cpp  test_functions.cpp
unit.tests/: CMakeLists.txt
unit.tests/include/unit.tests/: macroses.hpp
unit.tests/src/: main.cpp
unit.tests/src/helpers_tests/: comparators_tests.cpp
unit.tests/src/test_cases/: edge_tests.cpp  graph_base_interface_tests.cpp  matrix_graph_tests.cpp  matrix_tests.cpp  symmetric_matrix_abstract_tests.cpp  symmetric_matrix_interface_tests.cpp  symmetric_matrix_tests.cpp
unit.tests/src/test_data/: oriented_test_graph.cpp  reliable_test_graph.cpp  tested_matrix.cpp
unit.tests/src/utils_tests/: check_symmetrical_matrix_tests.cpp  comparators_tests.cpp  is_permutation_tests.cpp  to_transpositions_test.cpp
unit_tests/: CMakeLists.txt
unit_tests/include/unit_tests/: implementations.hpp  macroses.hpp
unit_tests/src/: main.cpp
unit_tests/src/helpers_tests/: comparators_tests.cpp
unit_tests/src/test_cases/: edge_tests.cpp  symmetrical_edge_tests.cpp
unit_tests/src/test_data/: oriented_test_graph.cpp  random_non_oriented_test_graph.cpp  random_test_graph.cpp  reliable_test_graph.cpp  test_matrix.cpp  tested_matrix.cpp
unit_tests/src/utils_tests/: apply_permutation_tests.cpp  check_symmetrical_matrix_tests.cpp  is_permutation_tests.cpp  to_transpositions_test.cpp
unit_tests/unit_tests/: implementations.hpp  main.cpp
unit_tests/unit_tests/test_data/: non_oriented_test_graph.cpp  non_oriented_test_graph.hpp  oriented_test_graph.cpp  oriented_test_graph.hpp  random_non_oriented_test_graph.cpp  random_non_oriented_test_graph.hpp  test_matrix.cpp  test_matrix.hpp
unit_tests/unit_tests/utils/: comparators.hpp  filesystem.hpp  first_n_range.hpp
(+217 files in other folders)
